--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^13.4.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
+    "gatsby-plugin-styled-components": "^3.3.6",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-contentful": "^2.3.15",
@@ -29,7 +31,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^3.10.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
